// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsView should render check for updates completed, with everything up to date 1`] = `
<div>
  <div
    className="core-settings-section"
  >
    <h4>
      Updates
    </h4>
    <p>
      Last update check performed: 
      2017-02-03 13:41:36
    </p>
    <div
      className="core-settings-update-check-controls"
    >
      <Checkbox
        checked={false}
        onChange={[Function]}
      >
        Check for updates at startup
      </Checkbox>
      <button
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Check for updates now"
      >
        <span
          className="glyphicon glyphicon-refresh"
        />
        <span
          className="core-btn-text"
        >
          Check for updates now
        </span>
      </button>
    </div>
  </div>
  <div>
    <Modal
      backdrop={false}
      onHide={null}
      show={true}
    >
      <ModalHeader
        closeButton={true}
      >
        <ModalTitle>
          Update check completed
        </ModalTitle>
      </ModalHeader>
      <ModalBody>
        <p>
          All apps are up to date.
        </p>
        
      </ModalBody>
      <ModalFooter>
         
        <Button
          disabled={false}
          onClick={[Function]}
        >
          OK
        </Button>
      </ModalFooter>
    </Modal>
  </div>
</div>
`;

exports[`SettingsView should render check for updates completed, with updates available 1`] = `
<div>
  <div
    className="core-settings-section"
  >
    <h4>
      Updates
    </h4>
    <p>
      Last update check performed: 
      2017-02-03 13:41:36
    </p>
    <div
      className="core-settings-update-check-controls"
    >
      <Checkbox
        checked={false}
        onChange={[Function]}
      >
        Check for updates at startup
      </Checkbox>
      <button
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Check for updates now"
      >
        <span
          className="glyphicon glyphicon-refresh"
        />
        <span
          className="core-btn-text"
        >
          Check for updates now
        </span>
      </button>
    </div>
  </div>
  <div>
    <Modal
      backdrop={false}
      onHide={null}
      show={true}
    >
      <ModalHeader
        closeButton={true}
      >
        <ModalTitle>
          Update check completed
        </ModalTitle>
      </ModalHeader>
      <ModalBody>
        <p>
          One or more updates are available. Go to the Add/remove apps screen to upgrade.
        </p>
        <a
          href="https://github.com/NordicSemiconductor/pc-nrfconnect-core/releases"
          rel="noopener noreferrer"
          target="_blank"
        >
          Release notes
           
        </a>
      </ModalBody>
      <ModalFooter>
         
        <Button
          disabled={false}
          onClick={[Function]}
        >
          OK
        </Button>
      </ModalFooter>
    </Modal>
  </div>
</div>
`;

exports[`SettingsView should render empty div while loading 1`] = `<div />`;

exports[`SettingsView should render when checking for updates 1`] = `
<div>
  <div
    className="core-settings-section"
  >
    <h4>
      Updates
    </h4>
    <div
      className="core-settings-update-check-controls"
    >
      <Checkbox
        checked={false}
        onChange={[Function]}
      >
        Check for updates at startup
      </Checkbox>
      <button
        className="btn btn-primary core-btn"
        disabled={true}
        onClick={[Function]}
        title="Checking..."
      >
        <span
          className="glyphicon glyphicon-refresh"
        />
        <span
          className="core-btn-text"
        >
          Checking...
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`SettingsView should render with check for updates disabled 1`] = `
<div>
  <div
    className="core-settings-section"
  >
    <h4>
      Updates
    </h4>
    <div
      className="core-settings-update-check-controls"
    >
      <Checkbox
        checked={false}
        onChange={[Function]}
      >
        Check for updates at startup
      </Checkbox>
      <button
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Check for updates now"
      >
        <span
          className="glyphicon glyphicon-refresh"
        />
        <span
          className="core-btn-text"
        >
          Check for updates now
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`SettingsView should render with check for updates enabled 1`] = `
<div>
  <div
    className="core-settings-section"
  >
    <h4>
      Updates
    </h4>
    <div
      className="core-settings-update-check-controls"
    >
      <Checkbox
        checked={true}
        onChange={[Function]}
      >
        Check for updates at startup
      </Checkbox>
      <button
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Check for updates now"
      >
        <span
          className="glyphicon glyphicon-refresh"
        />
        <span
          className="core-btn-text"
        >
          Check for updates now
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`SettingsView should render with last update check date 1`] = `
<div>
  <div
    className="core-settings-section"
  >
    <h4>
      Updates
    </h4>
    <p>
      Last update check performed: 
      2017-02-03 13:41:36
    </p>
    <div
      className="core-settings-update-check-controls"
    >
      <Checkbox
        checked={false}
        onChange={[Function]}
      >
        Check for updates at startup
      </Checkbox>
      <button
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Check for updates now"
      >
        <span
          className="glyphicon glyphicon-refresh"
        />
        <span
          className="core-btn-text"
        >
          Check for updates now
        </span>
      </button>
    </div>
  </div>
</div>
`;
